@@ -6,7 +6,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 import lombok.Data;
 import lombok.NonNull;
 import org.apache.commons.lang3.tuple.Pair;
@@ -49,7 +48,7 @@ public class StyleSheet {
         .filter(pair -> pair.getRight() != null)
         .sorted(Comparator.comparing(Pair::getRight))
         .map(Pair::getLeft)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
